@@ -381,6 +381,13 @@ typedef unsigned long useconds_t;
 
 
 /*
+ * Do we have the gnutls_priority_set_direct function?
+ */
+
+/* #undef HAVE_GNUTLS_PRIORITY_SET_DIRECT */
+
+
+/*
  * What Security framework headers do we have?
  */
 
