@@ -1,4 +1,4 @@
-CHANGES.txt - 2.0.2 - 2014-11-19
+CHANGES.txt - 2.0.2 - 2014-11-20
 --------------------------------
 
 CHANGES IN CUPS V2.0.2
@@ -7,6 +7,8 @@ CHANGES IN CUPS V2.0.2
 	  (<rdar://problem/14546232>)
 	- The scheduler incorrectly cleared the MakeModel string in the
 	  printers.conf file after a restart (<rdar://problem/16827518>)
+	- CUPS did not compile with older versions of GNU TLS (STR #4527)
+	- CUPS did not compile without Avahi or mDNSResponder (STR #4523)
 
 
 CHANGES IN CUPS V2.0.1
